# Scriptory

./: README.md  biome.json  drizzle.config.ts  makefile  package-lock.json  package.json  pyproject.toml
config/: languages.json
src/: index.ts  main.py
src/core/: scriptory.ts
src/data/: _readRaw.ts  database.py  database.ts  schema.ts  snippets.sql
src/shared/: constants.ts  types.ts
src/ui/: index.py  style.tcss
src/utils/readers/: finder.ts
~/.local/share/scriptory/db/: snippets.sqlite
